--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -7,7 +7,8 @@
   </parent>
   <artifactId>ide</artifactId>
   
-  <description>Contains code related to simplest IDE to work with java-- programming language</description>
+  <name>Javamm IDE</name>
+  <description>Simple GUI IDE for javamm programming language</description>
   
   	<dependencies>
 		<dependency>
