--- a/vm/pom.xml
+++ b/vm/pom.xml
@@ -7,7 +7,8 @@
   </parent>
   <artifactId>vm</artifactId>
   
-  <description>Contains java-- virtual machine settings</description>
+  <name>Javamm virtual machine</name>
+  <description>Default VM for javamm programming language</description>
   
   	<dependencies>
 		<dependency>
