--- a/pom.xml
+++ b/pom.xml
@@ -144,4 +144,11 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<site>
+			<id>devonline.academy</id>
+			<url>scp://devonline.academy/javamm/maven-docs</url>
+		</site>
+	</distributionManagement>
 </project>
