--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -8,15 +8,45 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>compiler</artifactId>
-	
+
 	<name>Javamm compiler</name>
 	<description>Default compiler for javamm programming language</description>
-	
+
+	<properties>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>code</artifactId>
 			<version>1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
