--- a/code/pom.xml
+++ b/code/pom.xml
@@ -31,6 +31,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.revenat</groupId>
+			<artifactId>junit-addons</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
@@ -41,8 +46,8 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -50,8 +55,10 @@
 				<configuration>
 					<argLine>
 						@{argLine}
-						--add-opens javamm.code/com.revenat.javamm.code.fragment=ALL-UNNAMED
-						--add-opens javamm.code/com.revenat.javamm.code.fragment.operation=ALL-UNNAMED
+						--add-opens
+						javamm.code/com.revenat.javamm.code.fragment=ALL-UNNAMED
+						--add-opens
+						javamm.code/com.revenat.javamm.code.fragment.operation=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
