--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -38,6 +38,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.revenat</groupId>
+			<artifactId>junit-addons</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
@@ -56,9 +61,12 @@
 				<configuration>
 					<argLine>
 						@{argLine}
-						--add-opens javamm.compiler/com.revenat.javamm.compiler=ALL-UNNAMED
-						--add-opens javamm.compiler/com.revenat.javamm.compiler.component.impl=ALL-UNNAMED
-						--add-opens javamm.compiler/com.revenat.javamm.compiler.component.impl.operation.simple=ALL-UNNAMED
+						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler=ALL-UNNAMED
+						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.component.impl=ALL-UNNAMED
+						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.component.impl.operation.simple=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
