Expression, UpdatableExpression, ExpressionContext, base implementations
NullValueExpression, TypeExpression, ConstantExpression, Keywords, test
for Expression implementations.

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -59,6 +59,8 @@
 						javamm.code/com.revenat.javamm.code.fragment=ALL-UNNAMED
 						--add-opens
 						javamm.code/com.revenat.javamm.code.fragment.operation=ALL-UNNAMED
+						--add-opens
+						javamm.code/com.revenat.javamm.code.fragment.expression=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
