Unit tests for expression-related components
SingleTokenExpressionBuilderImplTest, SyntaxUtilsTest,
ExpressionResolverImplTest

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -61,6 +61,8 @@
 						javamm.code/com.revenat.javamm.code.fragment.operation=ALL-UNNAMED
 						--add-opens
 						javamm.code/com.revenat.javamm.code.fragment.expression=ALL-UNNAMED
+						--add-opens
+						javamm.code/com.revenat.javamm.code.syntax=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
