Binary expression support for interpreter
ExpressionCalculator, BinaryExpressionCalculator,
BinaryCalculatorFacade, SubtractionBinaryExpressionCalculator

--- a/interpreter/pom.xml
+++ b/interpreter/pom.xml
@@ -74,6 +74,8 @@
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.expression.evaluator=ALL-UNNAMED
 						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.arithmetic=ALL-UNNAMED
+						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.model=ALL-UNNAMED
 					</argLine>
 				</configuration>
