--- a/release/pom.xml
+++ b/release/pom.xml
@@ -1,17 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.revenat</groupId>
-    <artifactId>javamm</artifactId>
-    <version>1.0</version>
-  </parent>
-  <artifactId>release</artifactId>
-  <packaging>pom</packaging>
-  
-  <name>Release aggregator</name>
-  <description>Release aggregator for javamm project</description>
-  
-  	<dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.revenat</groupId>
+		<artifactId>javamm</artifactId>
+		<version>1.0</version>
+	</parent>
+	<artifactId>release</artifactId>
+	<packaging>pom</packaging>
+
+	<name>Release aggregator</name>
+	<description>Release aggregator for javamm project</description>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report-aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
+
+	<dependencies>
 		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>code</artifactId>
