fix(integration tests): change tests to properly work with functions

--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -84,6 +84,8 @@
 						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.integration.operation=ALL-UNNAMED
 						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.integration.function=ALL-UNNAMED
+						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.integration.builder=ALL-UNNAMED
 					</argLine>
 				</configuration>
