--- a/vm/pom.xml
+++ b/vm/pom.xml
@@ -78,6 +78,8 @@
 						javamm.vm/com.revenat.javamm.vm.integration.expression=ALL-UNNAMED
 						--add-opens
 						javamm.vm/com.revenat.javamm.vm.integration.operation=ALL-UNNAMED
+						--add-opens
+						javamm.vm/com.revenat.javamm.vm.integration.function=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
