--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -10,11 +10,26 @@
   <name>Javamm IDE</name>
   <description>Simple GUI IDE for javamm programming language</description>
   
+  <properties>
+  	<javafx.version>11.0.2</javafx.version>
+  </properties>
+  
   	<dependencies>
 		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>vm</artifactId>
 			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>${javafx.version}</version>
 		</dependency>
 	</dependencies>
 </project>
