--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -54,5 +54,11 @@
             <artifactId>ikonli-typicons-pack</artifactId>
             <version>${ikonli.icons.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 </project>
