--- a/release/pom.xml
+++ b/release/pom.xml
@@ -13,21 +13,60 @@
     <name>Release aggregator</name>
     <description>Release aggregator for javamm project</description>
 
-    <reporting>
+    <properties>
+        <distribution.root>${project.basedir}/../target</distribution.root>
+        <distribution.multi.platform>${distribution.root}/javamm-distribution</distribution.multi.platform>
+        <distribution.windows>${distribution.root}/javamm-distribution-windows</distribution.windows>
+        <distribution.linux>${distribution.root}/javamm-distribution-linux</distribution.linux>
+        <distribution.macos>${distribution.root}/javamm-distribution-macos</distribution.macos>
+        <distribution.source.code>${distribution.root}/javamm-source-code</distribution.source.code>
+    </properties>
+
+    <build>
         <plugins>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>report-aggregate</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <ant antfile="${project.basedir}/build.xml">
+                                    <property name="root" value="${project.basedir}/../"/>
+                                    <property name="distribution.multi.platform" value="${distribution.multi.platform}"/>
+                                    <property name="distribution.windows" value="${distribution.windows}"/>
+                                    <property name="distribution.linux" value="${distribution.linux}"/>
+                                    <property name="distribution.macos" value="${distribution.macos}"/>
+                                    <property name="distribution.source.code" value="${distribution.source.code}"/>
+                                    <property name="javafx.version" value="${javafx.version}"/>
+
+                                    <target name="build"/>
+                                </ant>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>ant-contrib</groupId>
+                        <artifactId>ant-contrib</artifactId>
+                        <version>1.0b3</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>ant</groupId>
+                                <artifactId>ant</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
-    </reporting>
+    </build>
 
     <dependencies>
         <dependency>
@@ -66,4 +105,20 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report-aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
